--- a/mscz-security-server/pom.xml
+++ b/mscz-security-server/pom.xml
@@ -17,9 +17,15 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.mscz</groupId>
             <artifactId>mscz-security-token</artifactId>
+            <version>${mscz-security.version}</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>com.mscz</groupId>
+            <artifactId>mscz-security-app</artifactId>
             <version>${mscz-security.version}</version>
         </dependency>
     </dependencies>
