--- a/mscz-security-resource/pom.xml
+++ b/mscz-security-resource/pom.xml
@@ -18,8 +18,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-oauth2</artifactId>
+            <groupId>com.mscz</groupId>
+            <artifactId>mscz-security-authorize</artifactId>
+            <version>${mscz-security.version}</version>
         </dependency>
     </dependencies>
 
