--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,11 @@
     <version>1.0.0</version>
     <modules>
         <module>mscz-security-core</module>
-        <module>mscz-security-app</module>
         <module>mscz-security-token</module>
         <module>mscz-security-server</module>
-        <module>mscz-resource</module>
+        <module>mscz-security-resource</module>
+        <module>mscz-security-authorize</module>
+        <module>mscz-security-social</module>
     </modules>
 
 
